--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -31,73 +31,73 @@
     <div class="container">
       <!-- Timeblocks go here -->
 
-      <div class="time-blow" id="9am">
+      <div class="row time-block" id="9am">
         <div class="col-md-1 hour">
-          9 AM
-        </div>
-        <textarea class="col-md-10 description"></textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-      </div>
-      
-      <div class="time-blow" id="10am">
-        <div class="col-md-1 hour">
-          10 AM
+          9AM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="time-blow" id="11am">
+      <div class="row time-block" id="10am">
         <div class="col-md-1 hour">
-          11 AM
+          10AM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="time-blow" id="12pm">
+      <div class="row time-block" id="11am">
         <div class="col-md-1 hour">
-          12 PM
+          11AM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="time-blow" id="1pm">
+      <div class="row time-block" id="12pm">
         <div class="col-md-1 hour">
-          1 PM
+          12PM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="time-blow" id="2Pm">
+      <div class="row time-block" id="1pm">
         <div class="col-md-1 hour">
-          2 PM
+          1PM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="time-blow" id="3pm">
+      <div class="row time-block" id="2Pm">
         <div class="col-md-1 hour">
-          3 PM
+          2PM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="time-blow" id="4pm">
+      <div class="row time-block" id="3pm">
         <div class="col-md-1 hour">
-          4 PM
+          3PM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="time-blow" id="5pm">
+      <div class="row time-block" id="4pm">
         <div class="col-md-1 hour">
-          5 PM
+          4PM
+        </div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div class="row time-block" id="5pm">
+        <div class="col-md-1 hour">
+          5PM
         </div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
