--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
       <!-- Timeblocks go here -->
 
-      <div class="row time-block" id="9am">
+      <div class="row time-block" id="9">
         <div class="col-md-1 hour">
           9AM
         </div>
@@ -39,7 +39,7 @@
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="row time-block" id="10am">
+      <div class="row time-block" id="10">
         <div class="col-md-1 hour">
           10AM
         </div>
@@ -47,7 +47,7 @@
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="row time-block" id="11am">
+      <div class="row time-block" id="11">
         <div class="col-md-1 hour">
           11AM
         </div>
@@ -55,7 +55,7 @@
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="row time-block" id="12pm">
+      <div class="row time-block" id="12">
         <div class="col-md-1 hour">
           12PM
         </div>
@@ -63,7 +63,7 @@
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="row time-block" id="1pm">
+      <div class="row time-block" id="13">
         <div class="col-md-1 hour">
           1PM
         </div>
@@ -71,7 +71,7 @@
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="row time-block" id="2Pm">
+      <div class="row time-block" id="14">
         <div class="col-md-1 hour">
           2PM
         </div>
@@ -79,7 +79,7 @@
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="row time-block" id="3pm">
+      <div class="row time-block" id="15">
         <div class="col-md-1 hour">
           3PM
         </div>
@@ -87,7 +87,7 @@
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="row time-block" id="4pm">
+      <div class="row time-block" id="16">
         <div class="col-md-1 hour">
           4PM
         </div>
@@ -95,7 +95,7 @@
         <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
       </div>
 
-      <div class="row time-block" id="5pm">
+      <div class="row time-block" id="17">
         <div class="col-md-1 hour">
           5PM
         </div>
